--- a/style.css
+++ b/style.css
@@ -88,10 +88,47 @@ main{
     margin-top: 100px;
 }
 .employee-table{
-    margin: 100px 200px 100px 200px;
+    margin: 10px 200px 100px 200px;
     
 }
 .employee-table h3{
     text-align: center;
     padding: 30px ;
+}
+
+  
+  .welcome-page{
+    
+    
+    background-image: url("./assets/sean-pollock-PhYq704ffdA-unsplash.jpg");
+    background-size: cover;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+  }
+  .welcome-page:hover{
+    background-image: url(./assets/sean-pollock-PhYq704ffdA-unsplash.jpg);
+    background-color: rgba(255,255,255,0.6);
+    background-blend-mode: lighten;
+
+  }
+  .welcome-page button{
+    height: 100px;
+    align-items: center;
+    width: 400px;
+    font-size: x-large;
+    transition: transform .9s;
+  }
+.welcome-page button:hover{
+    transform: scale(1.2);
+    
+}
+.iframes{
+    margin: 300px 30px 100px 30px;
 }
