--- a/style.css
+++ b/style.css
@@ -1,23 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-  @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-*{
+* {
     font-family: 'Poppins', sans-serif;
 }
-.imp{
+
+.imp {
     margin: 25px;
     box-shadow: 5px 5px 8px grey;
 }
-.imp:hover{
-    
+
+.imp:hover {
+
     box-shadow: none;
 }
-.card-title{
+
+.card-title {
     text-align: center;
 }
-.top{
+
+.top {
     position: relative;
 }
-.top img{
+
+.top img {
     border-radius: 50%;
     height: 150px;
     width: 150px;
@@ -25,81 +30,98 @@
     top: 3px;
     right: 3px;
 }
-.greeting{
+
+.greeting {
     margin: 20px 0px 20px 0px;
 }
-.greeting h3{
+
+.greeting h3 {
     margin-top: 80px;
 }
-.employee-details{
+
+.employee-details {
     margin: 100px 0px 100px 0px;
 }
 
-.navbar{
+.navbar {
     height: 100px;
 }
 
-.login-box{
+.login-box {
     width: 400px;
-    min-height: 400px;
+    min-height: 300px;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 5px 5px 8px rgb(0, 0, 0) ;
+    box-shadow: 5px 5px 8px rgb(0, 0, 0);
     padding: 15px;
     text-align: center;
-    align-items: center;
+    align-items: left;
 }
-main{
+
+main {
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .login-body {
-    background-image: linear-gradient(to top left, rgb(0, 133, 190), rgb(255, 153, 70));
-
+    background-color: rgb(0, 44, 63);
 }
+
 .register-body {
-    background-image: linear-gradient(to top right, rgb(0, 133, 190), rgb(255, 153, 70));
-
+    background-color:  rgb(0, 44, 63);
 }
-.register-box{
-    width: 800px;
+
+.register-box {
+    width: 600px;
     min-height: 300px;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 5px 5px 8px rgb(0, 0, 0) ;
+    box-shadow: 5px 5px 8px rgb(0, 0, 0);
     padding: 15px;
-    text-align: center;
+    text-align: left;
+    margin-top: 200px;
 }
-.table{
+
+.table {
     border-spacing: 1px;
 }
-.paragraph{
+
+.paragraph {
     font-size: 20px;
     padding: 0px 100px 40px 100px;
+    background-image: url(./assets/favicon.jpg);
+    background-color: rgba(255, 255, 255, 0.6);
+    background-blend-mode: lighten;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
 }
-.our-services{
+
+.our-services {
     margin: 0;
     padding: 0;
-    background:  rgb(0,44,63);
+    background: rgb(0, 44, 63);
     padding: 20px 0px 50px 0px;
     margin-top: 100px;
 }
-.employee-table{
+
+.employee-table {
     margin: 10px 200px 100px 200px;
-    
-}
-.employee-table h3{
-    text-align: center;
-    padding: 30px ;
+
 }
 
-  
-  .welcome-page{
-    
-    
+.employee-table h3 {
+    text-align: center;
+    padding: 30px;
+}
+
+
+.welcome-page {
+
+
     background-image: url("./assets/sean-pollock-PhYq704ffdA-unsplash.jpg");
     background-size: cover;
     display: flex;
@@ -110,25 +132,54 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-  
-  }
-  .welcome-page:hover{
+
+}
+
+.welcome-page:hover {
     background-image: url(./assets/sean-pollock-PhYq704ffdA-unsplash.jpg);
-    background-color: rgba(255,255,255,0.6);
+    background-color: rgba(255, 255, 255, 0.6);
     background-blend-mode: lighten;
 
-  }
-  .welcome-page button{
+}
+
+.welcome-page button {
     height: 100px;
     align-items: center;
     width: 400px;
     font-size: x-large;
     transition: transform .9s;
-  }
-.welcome-page button:hover{
-    transform: scale(1.2);
-    
 }
-.iframes{
+
+.welcome-page button:hover {
+    transform: scale(1.2);
+
+}
+
+.iframes {
     margin: 300px 30px 100px 30px;
+}
+
+.footer{
+    width: 100%;
+    height: 300px;
+    margin-top: 100px;
+    background-color: rgb(255, 155, 42);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.footer img{
+    align-items: center;
+    margin: 50px;
+}
+
+.one{
+    font-size: xx-large;
+}
+.fa-brands{
+
+}
+.input-box{
+    width: 100%;
 }
