--- a/style.css
+++ b/style.css
@@ -156,7 +156,10 @@ main {
 }
 
 .iframes {
-    margin: 300px 30px 100px 30px;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .footer{
@@ -180,4 +183,9 @@ main {
 
 .input-box{
     width: 100%;
+}
+.iframe-span{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
